--- a/index.css
+++ b/index.css
@@ -47,6 +47,9 @@ body {
       outline: none;
       box-shadow: 0 0 5px rgba(0,123,255,0.2);
     }
+      #modifie {
+            display:none;
+      }
     button {
       padding: 10px;
       width: 100%;
