--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ body {
     label {
       display: block;
       font-weight: bold;
-      margin-bottom: 6px;
+      /*margin-bottom: 6px;*/
       color: #444;
     }
     input {
