--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container {
-  background: url('background.jpg') center/cover no-repeat;
+  background: url('background1.jpg') center/cover no-repeat;
   padding: 25px 30px;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
