--- a/index.css
+++ b/index.css
@@ -7,7 +7,17 @@ body {
   padding: 40px;
   font-size: 16px;
 }
-
+#loader{
+  display:none;
+  position:fixed;
+  top:0; left:0; right:0; bottom:0;
+  background: rgba(255,255,255,0.5);
+  backdrop-filter: blur(5px); /* 🔹 floute le fond */
+  z-index: 9999;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
 .container {
   background: url('background1.jpg') center/cover no-repeat;
   padding: 25px 30px;
