--- a/index.css
+++ b/index.css
@@ -7,7 +7,8 @@ body {
   padding: 40px;
   font-size: 16px;
 }
-#loader {
+#loader,
+#cinfail {
   display: none;                /* Caché par défaut */
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
