--- a/index.css
+++ b/index.css
@@ -7,8 +7,17 @@ body {
   padding: 40px;
   font-size: 16px;
 }
+#loader {
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
+  z-index: 9999;
 
-#loader,
+  display: none;               /* Caché par défaut */
+  align-items: center;
+  justify-content: center;
+}
 #cinfail {
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
