--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@ body {
   display: none;               /* Caché par défaut */
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .container {
