--- a/index.css
+++ b/index.css
@@ -7,28 +7,22 @@ body {
   padding: 40px;
   font-size: 16px;
 }
-#loader {
-  position: fixed;
-  top: 0; left: 0; right: 0; bottom: 0;
-  background: rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(5px);
-  z-index: 9999;
-
-  display: none;               /* Caché par défaut */
-  align-items: center;
-  justify-content: center;
-}
+/*loader et cinfail caché par défaut*/
+#login,
+#loader,
 #cinfail {
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
   background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(5px);
   z-index: 9999;
-
-  display: none;               /* Caché par défaut */
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+#loader,
+#cinfail {
+  display: none;
 }
 
 .container {
@@ -46,12 +40,7 @@ h2 {
   color: #333;
 }
 
-#login {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  flex-direction: column;
-}
+
 /*
 .field.row label {
   white-space: nowrap;
