--- a/index.css
+++ b/index.css
@@ -20,6 +20,10 @@ body {
   justify-content: center;
   flex-direction: column;
 }
+#login {
+  display: flex;
+  justify-content: center;
+}
 #loader,
 #cinfail {
   display: none;
