--- a/index.css
+++ b/index.css
@@ -22,6 +22,11 @@ body {
 /* Zone login */
 #login {
   display: flex;
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
+  z-index: 9999;
   flex-direction: column;  /* éléments empilés */
   gap: 15px;               /* espace vertical entre label, input, bouton */
   text-align: center;
