--- a/index.css
+++ b/index.css
@@ -30,6 +30,8 @@ body {
   flex-direction: column;  /* éléments empilés */
   gap: 15px;               /* espace vertical entre label, input, bouton */
   text-align: center;
+  align-items: center;
+  justify-content: center;
   padding: 30px;
   border-radius: 10px;
 }
