--- a/index.css
+++ b/index.css
@@ -9,10 +9,9 @@ body {
   margin: 0;
 }
 
-/* 🔄 Loader et cinfail cachés par défaut */
-/*#loader,*/
+/* 🔄 Loader et cinfail cachés par défaut 
 #cinfail {
-  display: none; /* cachés */
+  display: none; 
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
   background: rgba(255, 255, 255, 0.5);
@@ -22,8 +21,8 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-}
-#loader {
+}*/
+#loader, #fail {
   display: none; /* cachés */
 }
 /* 🔑 Zone login */
