--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ body {
   justify-content: center;
   flex-direction: column;
 }*/
-#loader, #fail {
+#loader, #fail, #cinfail {
   display: none; /* cachés */
 }
 /* 🔑 Zone login */
