--- a/index.css
+++ b/index.css
@@ -63,7 +63,7 @@ body {
 }*/
 
 /* 📝 Input */
-#login input,
+/*#login input,*/
 input {
   padding: 12px;
   border: 1px solid #ccc;
@@ -75,7 +75,7 @@ input {
   box-sizing: border-box;
 }
 
-#login input:focus,
+/*#login input:focus,*/
 input:focus {
   border-color: #007BFF;
   box-shadow: 0 0 5px rgba(0,123,255,0.3);
