--- a/index.css
+++ b/index.css
@@ -50,17 +50,6 @@ body {
   text-align: center;
 }
 
-/* 🏷️ Label CIN 
-#login label {
-  font-size: 18px;
-  color: #222;
-  font-weight: 600;
-  margin-bottom: 5px;
-}
-
-#cinlbl {
-  margin-top: 0;
-}*/
 
 /* 📝 Input */
 /*#login input,*/
@@ -127,9 +116,9 @@ button:disabled {
   cursor: not-allowed;
 }
 
-#cinfail button {
+#login button {
   margin: 10px;
-  width: 200px;
+  width: auto;
 }
 
 #btnrecu {
