--- a/index.css
+++ b/index.css
@@ -33,6 +33,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  justify-content: center;
   padding: 30px;
 }
 
