--- a/index.css
+++ b/index.css
@@ -48,8 +48,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 15px;
-  width: 100%;
-  max-width: 400px;
+  width: 400px;
   text-align: center;
 }
 /* logform */
