--- a/index.css
+++ b/index.css
@@ -47,7 +47,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 15px;
+  /*gap: 15px;*/
   width: 400px;
   text-align: center;
 }
@@ -71,17 +71,19 @@ body {
 #btnfail {
   display: flex;
   justify-content: space-between;
-  gap: 5px;
+  /*gap: 5px;*/
+  
   width: 90%; /* conteneur limité à 90% de cadre */
 }
 
 #btnfail button {
-  flex: 1;                
+  flex: 1;
+  margin: 5px 0;
   box-sizing: border-box;
 }
 
 /* 📝 Input */
-input {
+.container input {
   padding: 12px;
   border: 1px solid #ccc;
   border-radius: 6px;
@@ -103,8 +105,7 @@ input:disabled {
 }
 
 /* 🔘 Boutons */
-button,
-#login button {
+.container button {
   flex: 0 0 auto;
   padding: 12px 20px;
   background: #007BFF;
