--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@ body {
 
 /* deux boutons dans btnfail partagent 90% */
 #btnfail {
-  width: 100%;
+  /*width: 100%;*/
   display: flex;
   justify-content: space-between;
   /*gap: 5px;*/
@@ -78,7 +78,7 @@ body {
 }
 
 #btnfail button {
-  width: 90%;
+  width: auto;
   flex: 1;
   margin: 5px 0;
   box-sizing: border-box;
