--- a/index.css
+++ b/index.css
@@ -17,10 +17,7 @@ body {
   flex-direction: column;
   width:100%;
 }
-#btnfail {
-  display: flex;
-  flex-direction: row;
-}
+
 #loader, #fail, #cinfail {
   display: none; /* cachés */
 }
@@ -71,13 +68,13 @@ body {
 
 /* deux boutons dans btnfail partagent 90% */
 
+
 #btnfail {
-  /*width: 100%;*/
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  /*gap: 5px;*/
-  
-  width: 100%; /* conteneur limité à 90% de cadre */
+  width: 100%;
+  gap: 10px;
 }
 
 #btnfail button {
