--- a/index.css
+++ b/index.css
@@ -8,7 +8,9 @@ body {
   font-size: 16px;
   margin: 0;
 }
-
+#login img {
+  margin-bottom: 5px;
+}
 /* 🔄 Loader et cinfail cachés par défaut */
 #logform,
 #cinfail {
