--- a/index.css
+++ b/index.css
@@ -9,10 +9,12 @@ body {
   margin: 0;
 }
 input,
-  button {
-    padding: 15px;
-    
-  }
+button {
+  padding: 15px;
+  font-weight: bold;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
 #login img {
   margin-bottom: 5px;
 }
@@ -60,21 +62,12 @@ input,
 
 /* logform → input + bouton chercher */
 #logform input,
-#logform button {
-  width: 100%;
-  margin: 5px 0;
-  box-sizing: border-box;
-}
-
-/* cinfail → input nomsignal */
+#logform button,
 #cinfail input {
   width: 100%;
   margin: 5px 0;
   box-sizing: border-box;
 }
-
-/* deux boutons dans btnfail partagent 90% */
-
 
 #btnfail {
   display: flex;
@@ -94,8 +87,8 @@ input,
 /* 📝 Input */
 .container input {
   padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 6px;
+/*  border: 1px solid #ccc;
+  border-radius: 6px;*/
 
   transition: border-color 0.3s, box-shadow 0.3s;
   display: block;
@@ -121,7 +114,7 @@ input:disabled {
   color: #fff;
   border: none;
   border-radius: 6px;
-  font-weight: bold;
+  
 
   cursor: pointer;
   transition: background 0.3s, transform 0.2s;
@@ -131,7 +124,6 @@ input:disabled {
 #logform button {
   color: white;
   background: #1370B6;
-  font-weight: bold;
 }
 #logform button:hover {
   color: #1370B6;
@@ -139,8 +131,6 @@ input:disabled {
 }
 #logform input {
   color: #1370B6;
-
-  font-weight: bold;
 }
 
 button:disabled {
