--- a/index.css
+++ b/index.css
@@ -144,7 +144,7 @@ button:disabled {
 .container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
   gap: 10px;  
 }
