--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ body {
   background: #f4f6f9;
   display: flex;
   justify-content: center;
+  align-items:center;
   padding: 40px;
   font-size: 16px;
   margin: 0;
@@ -205,11 +206,12 @@ h2 {
   color: #333;
 }
 
-/* 📱 Mode mobile (jusqu’à 1100px) */
-@media (max-width: 1100px) {
+/* 📱 Mode mobile (jusqu’à 1080px) */
+@media (max-width: 1080px) {
   body {
     padding: 20px;
     font-size: 20px;
+    flex-direction: column;
   }
 
   .container {
