--- a/index.css
+++ b/index.css
@@ -3,9 +3,9 @@ body {
   font-family: Arial, sans-serif;
   background: #f4f6f9;
   display: flex;
-  flex-direction: row;
+  
   justify-content: center;
-  align-items:center;
+
   padding: 40px;
   font-size: 16px;
   margin: 0;
@@ -148,7 +148,7 @@ button:disabled {
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
-  gap: 10px;  
+  /*gap: 10px;  */
 }
 /* 🔔 Conteneur global notifications */
 #notifications {
@@ -193,7 +193,7 @@ button:disabled {
 
 #infos,
 #services {
-  background: url('background1.jpg') center/cover no-repeat;
+  /*background: url('background1.jpg') center/cover no-repeat;*/
   padding: 25px 30px;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
