--- a/index.css
+++ b/index.css
@@ -212,11 +212,12 @@ h2 {
   body {
     padding: 20px;
     font-size: 20px;
-    flex-direction: column;
+    
   }
 
   .container {
     flex-direction: column;
+    justify-content: center;
     padding: 25px;
     max-width: 100%;
   }
