--- a/index.css
+++ b/index.css
@@ -146,7 +146,8 @@ button:disabled {
 .container {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
+ /* justify-content: space-around;*/
   width: 100%;
   /*gap: 10px;  */
 }
@@ -212,12 +213,12 @@ h2 {
   body {
     padding: 20px;
     font-size: 20px;
-    align-items: center
+    
   }
 
   .container {
     flex-direction: column;
-    justify-content: center;
+    
     align-items: center;
     padding: 25px;
     max-width: 100%;
