--- a/index.css
+++ b/index.css
@@ -147,6 +147,7 @@ button:disabled {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
  /* justify-content: space-around;*/
   width: 100%;
   /*gap: 10px;  */
