--- a/index.css
+++ b/index.css
@@ -146,9 +146,9 @@ button:disabled {
 .container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
- /* justify-content: space-around;*/
+
+  
+ justify-content: space-around;
   width: 100%;
   /*gap: 10px;  */
 }
