--- a/index.css
+++ b/index.css
@@ -32,7 +32,17 @@ button {
 #loader, #fail, #cinfail {
   display: none; /* cachés */
 }
-
+#fail {
+  animation: shakefailimage 0.4s ease-in-out 0s 3;
+}
+@keyframes shakefailimage {
+  0% { transform: translate(0); }
+  20% { transform: translate(-5px); }
+  40% { transform: translate(5px); }
+  60% { transform: translate(-5px); }
+  80% { transform: translate(5px); }
+  100% { transform: translate(0); }
+}
 /* 🔑 Zone login */
 #login {
   display: flex;
