--- a/index.css
+++ b/index.css
@@ -3,8 +3,8 @@ body {
   font-family: Arial, sans-serif;
   background: #f4f6f9;
   display: flex;
-  /*flex-direction: column;*/
-  justify-content: center;
+  flex-direction: column;
+  /*justify-content: center;*/
   padding: 40px;
   font-size: 16px;
   margin: 0;
