--- a/index.css
+++ b/index.css
@@ -5,9 +5,13 @@ body {
   display: flex;
   flex-direction: column;
   /*justify-content: center;*/
-  padding: 40px;
+  padding: 10px;
   font-size: 16px;
   margin: 0;
+}
+header {
+  display: flex;
+  justify-content: space-between;
 }
 #login,
 #login input,
