--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ body {
 }
 header {
   display: flex;
+  align-items:center;
   justify-content: space-between;
 }
 #login,
@@ -217,9 +218,7 @@ button:disabled {
 }
 
 h2 {
-  text-align: center;
   margin-bottom: 20px;
-  color: #333;
 }
 .filigrane {
   position: fixed;     /* Toujours visible */
