--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@ header {
   display: flex;
   align-items:center;
   justify-content: space-between;
+  margin-bottom: 10px;
 }
 h1, h2, h3, h4, h5, h6 {
   margin: 0; /* supprime les marges par défaut */
