--- a/index.css
+++ b/index.css
@@ -250,11 +250,11 @@ h2 {
     flex-direction: column;
     
     align-items: center;
-    padding: 25px;
-    max-width: 100%;
+   /* padding: 25px;*/
+    width: 100%;
   }
   .cadre {
-    width: 600px;
+    width: 100%;
   }
   #infos,
   #services {
