--- a/index.css
+++ b/index.css
@@ -249,7 +249,7 @@ h2 {
   .container {
     flex-direction: column;
     
-    align-items: center;
+    justify-content: center;
    /* padding: 25px;*/
     width: 100%;
   }
