--- a/index.css
+++ b/index.css
@@ -114,6 +114,7 @@ button {
 .labels, .inputs{
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
 }
 #btnfail button {
   width: auto;
