--- a/index.css
+++ b/index.css
@@ -100,6 +100,7 @@ button {
 #btnfail {
   display: flex;
   flex-direction: row;
+  align-items:center;
   justify-content: space-between;
   width: 100%;
   gap: 10px;
