--- a/index.css
+++ b/index.css
@@ -111,6 +111,7 @@ button {
   /*justify-content: space-between;*/
   width: 100%;
   gap: 10px;
+  margin-top:10px;
 }
 .labels, .inputs{
   display: flex;
@@ -234,7 +235,6 @@ button:disabled {
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   width: 100%;
   max-width: 500px;
-  gap:20px;
 }
 
 h2 {
