--- a/index.css
+++ b/index.css
@@ -249,7 +249,7 @@ h2 {
   pointer-events: none; /* Ignorer les clics */
   z-index: 9999;       /* Toujours au-dessus */
 }
-#logoutBtn {
+.logoutBtn {
   background: #f37640;           /* même bleu que le bouton login */
   color: white;
   border: none;
@@ -262,18 +262,20 @@ h2 {
   transition: all 0.25s ease-in-out;
 }
 
-#logoutBtn:hover {
+.logoutBtn:hover {
   background: #8FADCC;           /* bleu clair au survol */
   color: #1370B6;
   transform: translateY(-2px);
   box-shadow: 0 5px 12px rgba(0,0,0,0.15);
 }
 
-#logoutBtn:active {
+.logoutBtn:active {
   transform: translateY(0);
   box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
-
+#logoutBtnmob{
+  display:none;
+}
 
 
 /* 📱 Mode mobile (jusqu’à 1080px) */
@@ -338,9 +340,15 @@ h2 {
     from { opacity: 1; transform: translateY(0); }
     to   { opacity: 0; transform: translateY(-100%); }
   }
-  #logoutBtn {
+  .logoutBtn {
     font-size: 35px;
     padding: 10px 15px;
     width: auto;
+  }
+  #logoutBtnmob{
+    display:block;
+  }
+  #logoutBtnpc{
+    display:none;
   }
 }
