--- a/index.css
+++ b/index.css
@@ -145,6 +145,7 @@ input:disabled {
 
 /* 🔘 Boutons */
 .container button {
+  font-weight: bold;
   width: auto;
   padding: 12px 20px;
   background: #007BFF;
@@ -282,6 +283,9 @@ h2 {
     font-size: 40px;
     
   }
+  .container button {
+    font-size: 40px;
+}
 #login img {
   width: 200px;
 }
