--- a/index.css
+++ b/index.css
@@ -33,8 +33,12 @@ header h2{
   justify-content: center;
   padding: 30px;
   font-size: inherit;
-  text-align: center;
-  font-weight: bold;
+ }
+#loader, #fail, #cinfail {
+  display: none; /* cachés */
+}
+#fail {
+  animation: shakefailimage 0.25s ease-in-out 0s 2;
 }
 #logform,
 #cinfail {
@@ -42,6 +46,7 @@ header h2{
   justify-content: center;
   flex-direction: column;
   width:100%;
+  font-weight: bold;
 }
 #logform input,
 #logform button,
@@ -49,6 +54,25 @@ header h2{
   width: 100%;
   margin: 5px 0;
   box-sizing: border-box;
+  text-align: center;
+}
+#logform button {
+  color: #fff;
+  background: #1370B6;
+  width: auto;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  /*transition: background 0.3s, transform 0.2s;*/
+  box-sizing: border-box;
+}
+#logform button:hover {
+  color: #1370B6;
+  background: #8FADCC;
+}
+#logform input {
+  color: #1370B6;
 }
 .inputs input {
   padding: 10px 12px;             /* confort visuel */
@@ -70,13 +94,15 @@ header h2{
   flex: 1;
   margin: 5px 0;
   box-sizing: border-box;
+
+
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  /*transition: background 0.3s, transform 0.2s;*/
+
 }
-#loader, #fail, #cinfail {
-  display: none; /* cachés */
-}
-#fail {
-  animation: shakefailimage 0.25s ease-in-out 0s 2;
-}
+
 @keyframes shakefailimage {
   0% { transform: translate(0); }
   25% { transform: translate(-4px); }
@@ -149,17 +175,7 @@ input:disabled {
   box-sizing: border-box;
 }
 
-#logform button {
-  color: white;
-  background: #1370B6;
-}
-#logform button:hover {
-  color: #1370B6;
-  background: #8FADCC;
-}
-#logform input {
-  color: #1370B6;
-}
+
 
 button:disabled {
   background: #b0c7e4;
