--- a/index.css
+++ b/index.css
@@ -60,7 +60,6 @@ header h2{
 #logform button {
   color: #fff;
   background: #1370B6;
-  width: auto;
   padding: 12px 20px;
   border: none;
   border-radius: 6px;
@@ -99,6 +98,8 @@ header h2{
   border: none;
   border-radius: 6px;
   cursor: pointer;
+  padding: 12px 20px;
+  box-sizing: border-box;
 }
 
 @keyframes shakefailimage {
