--- a/index.css
+++ b/index.css
@@ -56,6 +56,7 @@ header h2{
   box-sizing: border-box;
   text-align: center;
   font-weight: bold;
+ border-radius: 6px;
 }
 #logform button {
   color: #fff;
@@ -100,6 +101,7 @@ header h2{
   cursor: pointer;
   padding: 12px 20px;
   box-sizing: border-box;
+  background: #909090;
 }
 
 @keyframes shakefailimage {
@@ -301,7 +303,7 @@ h2 {
     justify-content: center;
     width: 100%;
   }
-#login input, 
+#logform input,
 .inputs input {
     font-size: 34px;        /* texte plus grand */
     padding: 18px 22px;     /* plus d’espace pour les doigts */
