--- a/index.css
+++ b/index.css
@@ -236,12 +236,12 @@ button:disabled {
 
 #infos,
 #services {
-  /*background: url('background1.jpg') center/cover no-repeat;*/
   padding: 25px 30px;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   width: 100%;
   max-width: 500px;
+  justify-content: space-between;
 }
 
 h2 {
