--- a/index.css
+++ b/index.css
@@ -241,6 +241,7 @@ button:disabled {
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   width: 100%;
   max-width: 500px;
+  display:flex;
   justify-content: space-between;
 }
 
