--- a/index.css
+++ b/index.css
@@ -242,6 +242,7 @@ button:disabled {
   width: 100%;
   max-width: 500px;
   display:flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
