--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ header {
   align-items:center;
   justify-content: space-between;
   margin-bottom: 10px;
+  flex: 0 0 auto;
 }
 h1, h2, h3, h4, h5, h6 {
   margin: 0; /* supprime les marges par défaut */
@@ -187,9 +188,10 @@ button:disabled {
   margin-top: 10px;
 }
 .container {
+  flex: 1;
   display: flex;
   flex-direction: row;
- justify-content: space-around;
+  justify-content: space-around;
   width: 100%;
   /*gap: 10px;  */
 }
