--- a/index.css
+++ b/index.css
@@ -328,6 +328,17 @@ h2 {
     flex: 1;
     width: 90%;
     max-width: none; /* supprime la limite de 500px */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%; /* permet de répartir sur la hauteur dispo */
+  }
+  #recus,
+  #autres {
+    flex: 1;               /* chacun prend 50% */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   /* Notifications centrées en haut */
   #notifications {
