--- a/index.css
+++ b/index.css
@@ -59,6 +59,16 @@ header h2{
   font-weight: bold;
  border-radius: 6px;
 }
+#logform input {
+  color: #1370B6;
+  background: #fff;
+  padding: 12px 20px;
+  border: 1px solid;
+  border-radius: 6px;
+  cursor: pointer;
+  /*transition: background 0.3s, transform 0.2s;*/
+  box-sizing: border-box;
+}
 #logform button {
   color: #fff;
   background: #1370B6;
@@ -72,9 +82,6 @@ header h2{
 #logform button:hover {
   color: #1370B6;
   background: #8FADCC;
-}
-#logform input {
-  color: #1370B6;
 }
 .inputs input {
   padding: 10px 12px;             /* confort visuel */
@@ -154,6 +161,7 @@ header h2{
 }
 input:focus {
   border-color: #f37640;
+  border: 2px solid;
   box-shadow: 0 0 5px rgba(244,246,249,0.3);
   outline: none;
 }
