--- a/index.css
+++ b/index.css
@@ -81,10 +81,8 @@ header h2{
   margin: 5px 0;
   box-sizing: border-box;
   text-align: center;
-}
-
-#logform button {
   color: #fff;
+  font-wheight: bold;
   background: #1370B6;
   padding: 12px 20px;
   border: none;
