--- a/index.css
+++ b/index.css
@@ -82,7 +82,7 @@ header h2{
   box-sizing: border-box;
   text-align: center;
   color: #fff;
-  font-wheight: bold;
+  font-weight: bold;
   background: #1370B6;
   padding: 12px 20px;
   border: none;
