--- a/index.css
+++ b/index.css
@@ -187,8 +187,8 @@ input:disabled {
   font-weight: bold;
   width: auto;
   padding: 12px 20px;
-  /*background: #007BFF;*/
-  background: blue;
+  background: #007BFF;
+ 
   color: #fff;
   border: none;
   border-radius: 6px;
@@ -214,6 +214,7 @@ button:disabled {
   justify-content: space-around;
   width: 100%;
   /*gap: 10px;  */
+   background: blue;
 }
 /* 🔔 Conteneur global notifications */
 #notifications {
