--- a/index.css
+++ b/index.css
@@ -213,6 +213,7 @@ button:disabled {
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
+  height: 100%;
   /*gap: 10px;  */
    background: blue;
 }
