--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
 /* 🌐 Styles généraux */
+html, body {
+  height: 100%; /* Important pour que flex fonctionne sur tout l'écran */
+  margin: 0;
+}
 body {
   font-family: Arial, sans-serif;
   background: #f4f6f9;
@@ -7,19 +11,26 @@ body {
   /*justify-content: center;*/
   padding: 10px;
   font-size: 16px;
-  margin: 0;
+}
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  flex: 0 0 auto; /* header garde sa hauteur naturelle */
+}
+.container {
+  flex: 1; /* prend tout l'espace restant */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+  background: blue;
 }
 .bi {
   font-size: 1.5em;
   vertical-align: middle;
   margin-right: 4px;
-}
-header {
-  display: flex;
-  align-items:center;
-  justify-content: space-between;
-  margin-bottom: 10px;
-  flex: 0 0 auto;
 }
 h1, h2, h3, h4, h5, h6 {
   margin: 0; /* supprime les marges par défaut */
@@ -207,16 +218,7 @@ button:disabled {
 #btnrecu {
   margin-top: 10px;
 }
-.container {
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 100%;
-  height: 100%;
-  /*gap: 10px;  */
-   background: blue;
-}
+
 /* 🔔 Conteneur global notifications */
 #notifications {
   position: fixed;
