--- a/index.css
+++ b/index.css
@@ -8,8 +8,8 @@ body {
   background: #f4f6f9;
   display: flex;
   flex-direction: column;
-  /*justify-content: center;*/
-  padding: 10px;
+  /*justify-content: center;
+  padding: 10px;*/
   font-size: 16px;
 }
 header {
