--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ header {
   flex: 1;
   display: flex;
   flex-direction: row;
-  justify-content: space-between; /* espace entre les blocs */
+  justify-content: space-around; /* espace entre les blocs */
   width: 100%;
   /*padding: 0 20px; /* espace par rapport aux bords gauche/droite */
   gap: 20px; /* espace entre #infos et #services */
