--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 5px 10px 5px 0;
+  padding: 10px 5px 0 5px;
   margin-bottom: 10px;
   flex: 0 0 auto; /* header garde sa hauteur naturelle */
 }
