--- a/index.css
+++ b/index.css
@@ -337,17 +337,26 @@ h2 {
   body {
     font-size: 40px;
   }
+  .container {
+    flex-direction: column;
+    align-items: stretch; /* blocs étirés en largeur */
+  }
+  #infos {
+    flex: 0; /* hauteur naturelle */
+    max-width: 100%;
+  }
+  #services {
+    flex: 1; /* prend tout le reste de la hauteur */
+    max-width: 100%;
+  }
+  
   .container button {
     font-size: 40px;
 }
 #login img {
   width: 200px;
 }
-  .container {
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-  }
+
 #logform input,
 #logform button,
 #cinfail input,
@@ -361,16 +370,7 @@ h2 {
   .cadre {
     width: 70%;
   }
-  #infos,
-  #services {
-    flex: 1;
-    width: 90%;
-    max-width: none; /* supprime la limite de 500px */
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%; /* permet de répartir sur la hauteur dispo */
-  }
+  
   #recus,
   #autres {
     flex: 1;               /* chacun prend 50% */
